--- a/BluethroughV2/app/build.gradle
+++ b/BluethroughV2/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "android.example.bluethrough"
+        applicationId "android.example.bluethroughv2"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
@@ -33,8 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'no.nordicsemi.android:mesh:2.4.4'
     implementation 'com.google.android.gms:play-services-nearby:17.0.0'
+    implementation 'org.jetbrains:annotations:15.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
